account/{id}/movement (pageable) + movement issue fixed and modified table and others entites  + fixe controller returning jpa entity avoiding lazy exception and add transactional